--- a/archives/zhihu-questions/2023-12-03.md
+++ b/archives/zhihu-questions/2023-12-03.md
@@ -1,24 +1,62 @@
 # 2023-12-03
 
-共 94 条
+共 113 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Sun Dec 03 2023 13:00:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Dec 03 2023 14:00:39 GMT+0800 (China Standard Time) -->
 1. [美国发布电动汽车税收减免拟议新规则，限制中国企业，如何解读美方意图？将对相关产业带来哪些影响？](https://www.zhihu.com/question/633001250)
 1. [大地磁暴预警发布，北京等多地出现极光，导航可能会不那么「灵」，哪些信息值得关注？](https://www.zhihu.com/question/632936847)
-1. [你认为今年A股12月份会有行情吗？](https://www.zhihu.com/question/633015626)
 1. [2023年你的数学研究或学习有什么收获和感悟？](https://www.zhihu.com/question/629305334)
-1. [23-24 赛季英超阿森纳 2:1 狼队，萨卡、厄德高破门，如何评价这场比赛？](https://www.zhihu.com/question/633061822)
+1. [2024 欧洲杯分组：西班牙、意大利、克罗地亚落位 B 组造死亡之组，你认为哪两支球队出线几率大？](https://www.zhihu.com/question/633075086)
+1. [如何评价《一人之下》漫画 650（689）话？](https://www.zhihu.com/question/632734795)
 1. [停火谈判陷入僵局，以色列谈判小组撤离卡塔尔，巴以局势将如何发展？](https://www.zhihu.com/question/633042469)
+1. [有没有这样一种行星，其上面所有地方都是全天白昼？](https://www.zhihu.com/question/632562475)
 1. [手机摄影与相机摄影的差异主要在哪里，日常使用哪种摄影好？](https://www.zhihu.com/question/630767825)
+1. [你认为今年A股12月份会有行情吗？](https://www.zhihu.com/question/633015626)
+1. [23-24 赛季英超阿森纳 2:1 狼队，萨卡、厄德高破门，如何评价这场比赛？](https://www.zhihu.com/question/633061822)
 1. [为什么不在铁路沿线铺设通信网络呢?](https://www.zhihu.com/question/632887350)
 1. [你眼中的2023年，中国汽车市场发生了哪些值得记忆的变化？](https://www.zhihu.com/question/632700230)
 1. [Team Leader 究竟要不要写代码？](https://www.zhihu.com/question/517252488)
+1. [12 月 1 日拼多多美股收盘市值超过阿里巴巴，成为中概股市值第一，哪些信息值得关注？](https://www.zhihu.com/question/632757771)
+1. [2499 元起的荣耀100 体验如何，可以直接首发入手吗？](https://www.zhihu.com/question/632696349)
 1. [冯小刚执导，葛优、舒淇主演《非诚勿扰 3》定档 12 月 30 日，你对这部电影有哪些期待？](https://www.zhihu.com/question/632771407)
+1. [树能给人提供怎样的情绪价值？为什么越来越多年轻人流行抱树？](https://www.zhihu.com/question/632295465)
+1. [准备送男朋友《原神》胡桃的键盘，这键盘还可以吗？](https://www.zhihu.com/question/631818394)
+1. [檀健次在电视剧《很想很想你》中的表现如何？](https://www.zhihu.com/question/632668112)
+1. [在职场「立人设」正被年轻人奉为「法宝」，背后的原因是什么？什么职场人设最吃香？](https://www.zhihu.com/question/632472730)
+1. [怎么看待对自己的挚友用心用力的好，却到最后形同陌路？](https://www.zhihu.com/question/462314219)
+1. [为什么说天生的诗人还得看小孩？](https://www.zhihu.com/question/632430525)
+1. [期货黄金创历史新高，现货金价也逼近历史高位，金价还能涨吗？](https://www.zhihu.com/question/632936841)
+1. [现在手机电池基本上都无法自行取出，这种设计主要是基于哪方面的考虑？](https://www.zhihu.com/question/632112754)
+1. [如何评价雷德利·斯科特执导的电影《拿破仑》？](https://www.zhihu.com/question/632700503)
+1. [2023年你最感兴趣的一辆新能源汽车是哪一款汽车，为什么？](https://www.zhihu.com/question/632782510)
+1. [如何评价周冬雨主演的电影《热搜》？](https://www.zhihu.com/question/631996888)
+1. [中国气象局预计 12 月 1 日左右或发生地磁暴，什么是地磁暴？对日常生活有哪些影响？](https://www.zhihu.com/question/632871445)
+1. [媒体谈「考公」升温，「考研」降温，称「要让年轻人在寒窗尽头还有闯荡的愿力和心气」，反映出什么社会现象？](https://www.zhihu.com/question/632806794)
+1. [这几年关于信用卡的投诉怎么这么多？](https://www.zhihu.com/question/632806197)
+1. [如果龙珠Z人造人篇章第一批去精神时光屋的是卡卡罗特孙悟饭，会怎么样？](https://www.zhihu.com/question/626450097)
+1. [为什么电影《涉过愤怒的海》的口碑会两极分化？](https://www.zhihu.com/question/632504790)
+1. [同为异世界动画，你觉得《葬送的芙莉莲》和《无职转生》有什么区别？](https://www.zhihu.com/question/631462132)
+1. [如何让小猫知道它自己叫什么名字？](https://www.zhihu.com/question/593079466)
+1. [为什么总会莫名其妙得罪人？](https://www.zhihu.com/question/320294047)
+1. [网友笑称连续4年以Tes.Ming开始，以Rng.Ming结束，对此你有什么看法？](https://www.zhihu.com/question/632835859)
+1. [如何看待人们在讨论中西文明发展差异时常常以“地理环境决定论”为核心？](https://www.zhihu.com/question/631868181)
+1. [电影《热搜》中有哪些细思极恐的细节？](https://www.zhihu.com/question/632606258)
+1. [12 月 1 日有网友在北京拍到极光，系北京史上第二次极光影像记录，你看到了吗？极光是如何形成的？](https://www.zhihu.com/question/632867941)
+1. [中国牛羊肉贵因为中国自然环境不适合生长牧草，那么是否可以只喂牛羊玉米大豆等饲料以增加国人牛羊肉消费？](https://www.zhihu.com/question/632377656)
+1. [「希腊总理要求归还帕特农神庙雕塑，苏纳克取消了会晤」，哪些信息值得关注？](https://www.zhihu.com/question/632266320)
+1. [学者调查「京郑杭深」零工市场，待遇下降，零工提前回流，「最大诉求就是拥有一份工作」，如何看待这一现象？](https://www.zhihu.com/question/632808657)
+1. [中国东方航空通报，一航班飞行过程中出现故障信息，具体情况如何？哪些信息值得关注？](https://www.zhihu.com/question/633103649)
+1. [知名餐饮品牌正新鸡排超 1 万家门店关闭，门店一度是肯德基中国 3 倍，哪些原因导致的？](https://www.zhihu.com/question/633100779)
+1. [卫健委称目前流行的急性呼吸道疾病均由已知病原体引起，未发现新发传染病，有哪些注意事项？](https://www.zhihu.com/question/632971578)
+1. [如何看待 30 吨混凝土搅拌车侧翻压顶极氪009，双 A 柱完好无损？](https://www.zhihu.com/question/632823793)
+1. [去过老挝后你最大的感受是什么？](https://www.zhihu.com/question/332996631)
+1. [适合当代年轻人的厨房是怎么样的，有什么东西必须配备？](https://www.zhihu.com/question/516006550)
+1. [华硕灵耀14 2024预约已开启，作为首台搭载酷睿 Ultra 的笔记本电脑，你对它有哪些期待？](https://www.zhihu.com/question/632809896)
+1. [为什么有人说明代的威远炮相比拿战火炮数据依然不过时甚至称得上优秀？](https://www.zhihu.com/question/632071503)
 1. [NBA 23-24赛季，快船113:112勇士，如何评价本场比赛？](https://www.zhihu.com/question/633093813)
 1. [JDG官宣knight离队，如何评价他在队伍期间的表现？](https://www.zhihu.com/question/632952969)
 1. [获得神之眼的代价是什么？](https://www.zhihu.com/question/550571210)
-1. [12 月 1 日拼多多美股收盘市值超过阿里巴巴，成为中概股市值第一，哪些信息值得关注？](https://www.zhihu.com/question/632757771)
 1. [如果c罗拿下世界杯，会不会成为第三代球王？](https://www.zhihu.com/question/629863825)
 1. [讨好型人格如何改变？](https://www.zhihu.com/question/266660862)
 1. [如何评价闫妮、谭松韵主演的电影《再见，李可乐》？](https://www.zhihu.com/question/562068077)
@@ -42,44 +80,27 @@
 1. [如果给你1000万预算，让你组出一个能进世界赛的lpl战队，你会怎么组？](https://www.zhihu.com/question/613560778)
 1. [中世纪欧洲商贸不发达时期，剩余的农产品是如何处理的？](https://www.zhihu.com/question/632557455)
 1. [23-24 赛季 NBA快船 114:120 勇士，如何评价这场比赛？](https://www.zhihu.com/question/632775098)
-1. [中国气象局预计 12 月 1 日左右或发生地磁暴，什么是地磁暴？对日常生活有哪些影响？](https://www.zhihu.com/question/632871445)
 1. [下属边界感太强怎么办?](https://www.zhihu.com/question/632503225)
 1. [《魔兽争霸3》中，如果大法师的辉煌光环变为6级技能，群体传送变为小技能，会怎么样？](https://www.zhihu.com/question/632762221)
 1. [当下，真的存在像李子柒视频中表现的那种田园生活吗？](https://www.zhihu.com/question/315551260)
 1. [如何评价综艺《快乐老友记》第五期？](https://www.zhihu.com/question/632783434)
 1. [如何评价韩剧《甜蜜家园》第二季？](https://www.zhihu.com/question/632895932)
-1. [知名餐饮品牌正新鸡排超 1 万家门店关闭，门店一度是肯德基中国 3 倍，哪些原因导致的？](https://www.zhihu.com/question/633100779)
-1. [卫健委称目前流行的急性呼吸道疾病均由已知病原体引起，未发现新发传染病，有哪些注意事项？](https://www.zhihu.com/question/632971578)
-1. [树能给人提供怎样的情绪价值？为什么越来越多年轻人流行抱树？](https://www.zhihu.com/question/632295465)
-1. [檀健次在电视剧《很想很想你》中的表现如何？](https://www.zhihu.com/question/632668112)
 1. [如果能对 2023 说一句话，你想说什么？](https://www.zhihu.com/question/632802638)
-1. [准备送男朋友《原神》胡桃的键盘，这键盘还可以吗？](https://www.zhihu.com/question/631818394)
 1. [如何看待特斯拉Cybertruck皮卡车型23年12月1日终于在北美交付，起售价60990 美元？](https://www.zhihu.com/question/632654445)
 1. [现在的年轻人为什么越来越喜欢独处？](https://www.zhihu.com/question/629993287)
 1. [《涉过愤怒的海》娜娜六点半那一通电话真的是误触吗？](https://www.zhihu.com/question/632092056)
 1. [世界历史上有哪些不为人知的冷知识？](https://www.zhihu.com/question/572112237)
 1. [沙特联：利雅得德比，新月 3:0 胜利，米神双响，C罗进球被吹，如何评价本场比赛？](https://www.zhihu.com/question/632937707)
-1. [期货黄金创历史新高，现货金价也逼近历史高位，金价还能涨吗？](https://www.zhihu.com/question/632936841)
-1. [现在手机电池基本上都无法自行取出，这种设计主要是基于哪方面的考虑？](https://www.zhihu.com/question/632112754)
 1. [如何评价综艺《声生不息·家年华》第一期？](https://www.zhihu.com/question/632957191)
 1. [有哪些震撼人心的红军故事？](https://www.zhihu.com/question/441311306)
 1. [文笔挑战，“鱼儿亲吻着她脸上的哀愁，__”你会怎么接下一句?](https://www.zhihu.com/question/632806407)
-1. [如何看待人们在讨论中西文明发展差异时常常以“地理环境决定论”为核心？](https://www.zhihu.com/question/631868181)
-1. [2023年你最感兴趣的一辆新能源汽车是哪一款汽车，为什么？](https://www.zhihu.com/question/632782510)
 1. [23-24 赛季 NBA 掘金 119 : 111 太阳，如何评价这场比赛？](https://www.zhihu.com/question/632946704)
-1. [如果龙珠Z人造人篇章第一批去精神时光屋的是卡卡罗特孙悟饭，会怎么样？](https://www.zhihu.com/question/626450097)
 1. [目前就业市场，裸辞后找工作会很难吗？](https://www.zhihu.com/question/632472691)
 1. [未来的大趋势到底是油车还是电车？](https://www.zhihu.com/question/620118718)
 1. [正史中诸葛亮的军事才能哪来的？](https://www.zhihu.com/question/55655113)
-1. [电影《热搜》中有哪些细思极恐的细节？](https://www.zhihu.com/question/632606258)
 1. [《一念关山》第 11-14 集拍得如何？有哪些值得关注的剧情点？](https://www.zhihu.com/question/632842147)
-1. [华硕灵耀14 2024预约已开启，作为首台搭载酷睿 Ultra 的笔记本电脑，你对它有哪些期待？](https://www.zhihu.com/question/632809896)
-1. [为什么有人说明代的威远炮相比拿战火炮数据依然不过时甚至称得上优秀？](https://www.zhihu.com/question/632071503)
 1. [作为求职者，你认为今年找工作更难还是更容易了？](https://www.zhihu.com/question/632472710)
 1. [如何评价《元梦之星》定档派对发布会？有哪些值得期待的精彩信息？](https://www.zhihu.com/question/632978045)
-1. [学者调查「京郑杭深」零工市场，待遇下降，零工提前回流，「最大诉求就是拥有一份工作」，如何看待这一现象？](https://www.zhihu.com/question/632808657)
-1. [适合当代年轻人的厨房是怎么样的，有什么东西必须配备？](https://www.zhihu.com/question/516006550)
-1. [「希腊总理要求归还帕特农神庙雕塑，苏纳克取消了会晤」，哪些信息值得关注？](https://www.zhihu.com/question/632266320)
 1. [为什么芙宁娜自称boku?](https://www.zhihu.com/question/632736417)
 1. [为什么大模型能通过自然语言训练拥有智能？智能的载体是自然语言吗？](https://www.zhihu.com/question/632809237)
 1. [你有什么给穷人家孩子的忠告？](https://www.zhihu.com/question/412080163)
@@ -92,8 +113,6 @@
 1. [阿里凭借深耕多年的电商底蕴，咋就这么被多多同学给超了呢？](https://www.zhihu.com/question/632642823)
 1. [谷歌 DeepMind 通过 AI 工具 GNoME 发现 220万种新材料，具体情况如何？有何影响？](https://www.zhihu.com/question/632802664)
 1. [中国气象局发布大地磁暴预警，卫星导航设备误差增大，航空飞行将面临通信环境变差风险，还有哪些影响？](https://www.zhihu.com/question/632927253)
-1. [12 月 1 日有网友在北京拍到极光，系北京史上第二次极光影像记录，你看到了吗？极光是如何形成的？](https://www.zhihu.com/question/632867941)
-1. [媒体谈「考公」升温，「考研」降温，称「要让年轻人在寒窗尽头还有闯荡的愿力和心气」，反映出什么社会现象？](https://www.zhihu.com/question/632806794)
 1. [据官方最新监测和预报，12 月 4 日可能发生小到中等地磁暴，将带来哪些影响？](https://www.zhihu.com/question/632980142)
 1. [如何评价华为新开源的openlnula？](https://www.zhihu.com/question/632458791)
 1. [学校的家长会每学期开一次，你对家长会有什么看法？](https://www.zhihu.com/question/631840679)
